Set formatter and style per language, not mime type. Make style references from different languages with the same name one style object.

BUG: 230472
REVIEW: 100868